# reg

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: dev.yml  pylint.yml  release.yml
brain/: sqlgen.py
brain/prompts/: setup.py
data/: README.md
docs/: api.md  installation.md  usage.md
evaluations/: README.md  benchmark.py  dengue_clean.json  netflix_titles.json
examples/: Data Analysis.ipynb
regdbot/: __init__.py  cli.py  config.yml  main.py  persona_prompts.py  regwui.html
regdbot/brain/: __init__.py  analysis.py  dbtools.py  ingest.py  memory.py  statements.py  utils.py
regdbot/brain/prompts/: setup.py
regdbot/brain/sqlprompts/: __init__.py
regdbot/voice/: talk.py
tests/brain/: test_analysis.py  test_brain.py  test_dbtools.py  test_ingest.py  test_memory.py  test_sqlgen.py  test_utils.py
tests/brain/fixtures/: Star_Trek-Season_1.csv
tests/voice/: test_talk.py
voice/: talk.py
