[tool.poetry]
name = "reg-d-bot"
version = "0.1.1"
description = "AI bot specialized in Database exploration"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPL-v3"
readme = "README.md"
packages = [
    { include = "regdbot"},
]

[tool.poetry.scripts]
reggie = "regdbot.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.1"
loguru = "^0.7.2"
loguru-mypy = "*"
pgvector = "^0.2.5"
duckdb = "^0.10.1"
fire = "^0.6.0"
python-dotenv = "^1.0.1"
duckdb-engine = "^0.11.2"
openai = "^1.16.0"
ollama = "^0.1.8"
base-ai-agent = {git = "https://github.com/Deeplearn-PeD/base-ai-agent.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-integration = "^0.2.3"
pytest-cov = "^4.0.0"
mypy= "^1.9.0"
auto-changelog = "^0.6.0"


[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
