[tool.poetry]
name = "reg-d-bot"
version = "0.7.0"
description = "AI bot specialized in Database exploration"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPL-v3"
readme = "README.md"
packages = [
    { include = "regdbot"},
]

[tool.poetry.scripts]
reggie = "regdbot.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
SQLAlchemy = ">=2.0.29"
psycopg2-binary = ">=2.9.9"
pandas = "^2.2.1"
loguru = ">=0.7.2"
loguru-mypy = "*"
pgvector = "^0.2.5"
duckdb = ">=1.0.0"
fire = "^0.6.0"
python-dotenv = "^1.0.1"
duckdb-engine = "^0.11.2"
openai = "^1.16.0"
base-ai-agent = {git = "https://github.com/Deeplearn-PeD/base-ai-agent.git"}
pyaml = "^24.4.0"
sqlparse = "^0.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
deltalake = ">=0.18.2"
tabulate = ">=0.9.0"
sqlmodel = ">=0.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-integration = "^0.2.3"
pytest-cov = "^4.0.0"
mypy= "^1.9.0"
git-changelog = "^2.5.2"
jupyter = "^1.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocs-material-extensions = "^1.3.1"
mkdocs-include-markdown-plugin = "^6.2.1"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}


[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = true
marker-line = "<!-- insertion marker -->"
output = "output.log"
parse-refs = false
parse-trailers = false
provider = "github"
repository = "."
sections = "fix,deps,feat,refactor"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true
