[project]
name = "reg-d-bot"
version = "0.7.3"
description = "AI bot specialized in Database exploration"
authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "GPLv3"}
dependencies = [
    "SQLAlchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.1,<3",
    "loguru>=0.7.2",
    "loguru-mypy",
    "pgvector>=0.2.5,<0.3",
    "duckdb>=1.0.0",
    "fire>=0.6.0,<0.7",
    "python-dotenv>=1.0.1,<2",
    "duckdb-engine>=0.11.2,<0.12",
    "openai>=1.16.0,<2",
    "base-ai-agent",
    "pyaml>=24.4.0,<25",
    "sqlparse>=0.5.0,<0.6",
    "matplotlib>=3.9.0,<4",
    "seaborn>=0.13.2,<0.14",
    "deltalake>=0.18.2",
    "tabulate>=0.9.0",
    "sqlmodel>=0.0.21",
    "scipy",
]

[project.scripts]
reggie = "regdbot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-integration>=0.2.3,<0.3",
    "pytest-cov>=4.0.0,<5",
    "mypy>=1.9.0,<2",
    "git-changelog>=2.5.2,<3",
    "jupyter>=1.0.0,<2",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.28,<10",
    "mkdocs-material-extensions>=1.3.1,<2",
    "mkdocs-include-markdown-plugin>=6.2.1,<7",
    "mkdocstrings[python]>=0.25.1,<0.26",
]
pre-commit = [
    "pre-commit>=3.7.0,<4",
    "ruff>=0.4.3,<0.5",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit",
]

[tool.uv.sources]
base-ai-agent = { git = "https://github.com/Deeplearn-PeD/base-ai-agent.git" }

[tool.hatch.build.targets.sdist]
include = ["regdbot"]

[tool.hatch.build.targets.wheel]
include = ["regdbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = true
marker-line = "<!-- insertion marker -->"
output = "output.log"
parse-refs = false
parse-trailers = false
provider = "github"
repository = "."
sections = "fix,deps,feat,refactor"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true
